--- a/settings.json
+++ b/settings.json
@@ -9,10 +9,10 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
+	"ownerNumber": "6281515123462",
 	"ownerNumberr": "62887435047326",
 	"cr": "@ZeeoneOfcོ",
-	"ownername": "ZeeoneOfcོ",
+	"ownername": "Arulldxdd",
 	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
