--- a/settings.json
+++ b/settings.json
@@ -10,10 +10,10 @@
 	"prefix": ".",
 	"language":"ind",
 	"ownerNumber": "6281515123462",
-	"ownerNumberr": "62887435047326",
+	"ownerNumberr": "6281515123462",
 	"cr": "@ZeeoneOfcོ",
 	"ownername": "ARULLTOD",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"botname":"ARULLTODD~~",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
 	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfcོ"
